# midled

./: .gitignore  CMakeLists.txt  README.md  midled.ioc  openocd.conf
Inc/: buffer.h  main.h  midi.h  sdcard.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
Src/: buffer.c  dma.c  gpio.c  main.c  midi.c  sdcard.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
